--- a/server/chat/package.json
+++ b/server/chat/package.json
@@ -21,6 +21,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
-    "socket": "^1.1.50"
+    "socket": "^1.1.50",
+    "socket.io": "^4.8.3"
   }
 }
