--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.1.1",
     "react": "19.2.3",
