--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "sass": "^1.97.1"
   },
