--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "sass": "^1.97.1"
+    "sass": "^1.97.1",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
