--- a/server/jobs/package.json
+++ b/server/jobs/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.9",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "nodemailer": "^7.0.11"
